--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,7 @@
     </div>
     </nav>
 </header>
+{% include 'flash_messages.html.twig' %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
